--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
     border: none;
     border-radius: 20px;
     
-    /* Korrigierte Position für YOUR NAME und YOUR MESSAGE */
-    padding: 220px 40px 40px; 
+    /* 🌟 ANGEPASST: Größerer oberer Abstand, um es tiefer zu setzen */
+    padding: 220px 40px 40px; 
     
     max-width: 440px; 
     height: 520px; 
@@ -126,7 +126,7 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
     position: relative;
     z-index: 10;
     
-    /* Leichte Verschiebung nach unten */
+    /* 🌟 ANGEPASST: Leichte Verschiebung nach unten */
     transform: translateY(10px); 
 }
 
