--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ h2{text-align:center;margin-bottom:30px;font-weight:700;color:var(--gold-light);
   border-radius: 20px;
   padding: 40px 35px; 
   width: 100%;
-  max-width: 440px; /* ZURÜCKGESETZT */
+  max-width: 440px; 
   box-shadow: 0 0 45px var(--gold-shadow);
   text-align: center;
   z-index: 10;
@@ -137,10 +137,10 @@ h2{text-align:center;margin-bottom:30px;font-weight:700;color:var(--gold-light);
 
 /* SPEZIELLE ANPASSUNG: YOUR NAME kleiner machen */
 .guestbook-form-wrapper input[type="text"] {
-    width: 80%; /* Kleiner machen */
-    margin-left: auto; /* Zentrieren */
-    margin-right: auto; /* Zentrieren */
-    display: block; /* Für die Zentrierung nötig */
+    width: 80%; 
+    margin-left: auto; 
+    margin-right: auto; 
+    display: block; 
 }
 /* ENDE SPEZIELLE ANPASSUNG */
 
@@ -261,8 +261,8 @@ h2{text-align:center;margin-bottom:30px;font-weight:700;color:var(--gold-light);
 .contact-section-deluxe a { color: var(--gold-light) !important; text-decoration: none; font-weight: bold; display: block; margin-top: 25px; transition: color 0.2s; }
 .social-links { margin: 30px 0 20px; text-align: center;}
 .social-links a img { 
-    width: 48px; /* VERGRÖSSERT */ 
-    height: 48px; /* VERGRÖSSERT */ 
+    width: 36px; /* NEU VERKLEINERT */ 
+    height: 36px; /* NEU VERKLEINERT */ 
     margin: 0 10px; 
     vertical-align: middle; 
     border-radius: 50%; 
@@ -310,7 +310,7 @@ footer{text-align:center;padding:15px 0;background:var(--surface);color:#888;mar
     text-shadow:0 0 5px var(--gold-shadow);
   }
   .guestbook-form-wrapper input[type="text"] {
-    width: 100%; /* Auf Mobile volle Breite */
+    width: 100%; 
     margin-left: 0;
     margin-right: 0;
   }
@@ -320,8 +320,8 @@ footer{text-align:center;padding:15px 0;background:var(--surface);color:#888;mar
   .container {padding: 0 10px;} 
   
   .social-links a img { 
-    width: 40px; /* Leicht kleiner auf Mobile */ 
-    height: 40px; /* Leicht kleiner auf Mobile */ 
+    width: 30px; /* NEU VERKLEINERT AUF MOBILE */ 
+    height: 30px; /* NEU VERKLEINERT AUF MOBILE */ 
   }
 }
 </style> 
@@ -366,7 +366,7 @@ für Ihr perfektes Haar- und Bartgefühl.</p> 
             </form> 
             <p id="successMsg" style="display:none; color: var(--gold-light);">✅ Vielen Dank für Ihren Eintrag!</p> 
         </div>
-    </div>
+      </div>
 </div> 
 
 
