--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
     padding: 0;
     margin: 40px auto;
     background: transparent;
-    max-width: 1200px;
+    max-width: var(--max-width); /* Nutze die Variable für konsistente Breite */
     position: relative;
     box-shadow: none;
     overflow: hidden; /* Wichtig für die Poles/Icons */
+    min-height: 600px; /* Um Platz für Dekorationen zu schaffen */
 }
 
 /* Hintergrundmuster (wie im Bild) */
@@ -64,11 +65,12 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
     top: 0; left: 0; right: 0; bottom: 0;
     background:
         /* Zwei goldene Radials (oben links/rechts, wie Lichtflecken) */
-        radial-gradient(circle at 15% 15%, rgba(255, 215, 0, 0.05) 0%, transparent 20%),
-        radial-gradient(circle at 85% 15%, rgba(255, 215, 0, 0.05) 0%, transparent 20%),
+        radial-gradient(circle at 10% 10%, rgba(255, 215, 0, 0.04) 0%, transparent 25%),
+        radial-gradient(circle at 90% 10%, rgba(255, 215, 0, 0.04) 0%, transparent 25%),
+        radial-gradient(circle at 50% 100%, rgba(255, 215, 0, 0.02) 0%, transparent 40%), /* Dezenter Lichtkegel unten */
         /* Feines Gittermuster */
-        linear-gradient(to right, rgba(255, 215, 0, 0.02) 1px, transparent 1px) 0 0,
-        linear-gradient(to bottom, rgba(255, 215, 0, 0.02) 1px, transparent 1px) 0 0;
+        linear-gradient(to right, rgba(255, 215, 0, 0.015) 1px, transparent 1px) 0 0,
+        linear-gradient(to bottom, rgba(255, 215, 0, 0.015) 1px, transparent 1px) 0 0;
     background-size: 20px 20px, 20px 20px, 50px 50px, 50px 50px;
     opacity: 0.8;
     z-index: 1;
@@ -83,6 +85,7 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
     position: relative;
     z-index: 10;
     padding: 50px 0;
+    height: 100%; /* Wichtig für vertikale Zentrierung der Dekorationen */
 }
 
 .guestbook-form-wrapper {
@@ -183,74 +186,89 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
 
 /* Schere und Kamm Icons (mit Font Awesome) */
 .scissors-drawing {
-    left: 100px;
+    left: calc(50% - 400px); /* Relative Positionierung zur Mitte */
     top: 50%;
     transform: translateY(-50%) rotate(30deg);
-    font-size: 100px;
+    font-size: 120px; /* Grösser gemacht */
     color: var(--gold);
+    text-shadow: 0 0 15px var(--gold-shadow);
 }
 .comb-drawing {
-    right: 100px;
+    right: calc(50% - 400px); /* Relative Positionierung zur Mitte */
     top: 50%;
     transform: translateY(-50%) scaleX(-1) rotate(-30deg);
-    font-size: 100px;
+    font-size: 120px; /* Grösser gemacht */
     color: var(--gold);
+    text-shadow: 0 0 15px var(--gold-shadow);
 }
 
 /* Barber Pole (CSS-Generiert und Animiert) */
 .barber-pole {
-    width: 80px;
-    height: 250px;
+    width: 90px; /* Etwas breiter */
+    height: 300px; /* Etwas höher */
     background: repeating-linear-gradient(
-        15deg, /* Leichter Winkel für die Streifen */
-        var(--pole-white) 0%, var(--pole-white) 10%,
-        var(--pole-red) 10%, var(--pole-red) 30%,
-        var(--pole-blue) 30%, var(--pole-blue) 50%
+        20deg, /* Leichterer Winkel für die Streifen */
+        var(--pole-white) 0%, var(--pole-white) 15%,
+        var(--pole-red) 15%, var(--pole-red) 35%,
+        var(--pole-blue) 35%, var(--pole-blue) 55%
     );
-    background-size: 100% 100px; /* Wichtig für die Animation */
+    background-size: 100% 120px; /* Wichtig für die Animation */
     border-radius: 5px;
     overflow: hidden;
-    box-shadow: 0 0 15px var(--gold-shadow);
-    animation: rotatePole 2s linear infinite;
+    box-shadow: 0 0 20px var(--gold-shadow); /* Stärkerer Schatten */
+    animation: rotatePole 2.5s linear infinite; /* Leichter verlangsamt */
 }
 
 @keyframes rotatePole {
     0% { background-position: 0 0; }
-    100% { background-position: 0 100px; /* Streifen bewegen sich nach unten */ }
+    100% { background-position: 0 120px; /* Streifen bewegen sich nach unten */ }
 }
 
 .barber-pole::before, .barber-pole::after {
     content: '';
     position: absolute;
-    left: 0; width: 100%; height: 20px;
+    left: 0; width: 100%; height: 25px; /* Etwas höhere Kappen */
     background: var(--gold);
-    box-shadow: 0 0 10px var(--gold-shadow);
+    box-shadow: 0 0 12px var(--gold-shadow);
 }
 .barber-pole::before { top: 0; border-radius: 5px 5px 0 0; }
 .barber-pole::after { bottom: 0; border-radius: 0 0 5px 5px; }
 
 .barber-pole.left {
-    left: 50%;
-    margin-left: -500px; /* Position links des Formulars */
-    top: 50px;
+    left: calc(50% - 580px); /* Deutlich weiter links */
+    top: 50%;
+    transform: translateY(-50%);
 }
 .barber-pole.right {
-    left: 50%;
-    margin-left: 420px; /* Position rechts des Formulars */
-    top: 50px;
+    right: calc(50% - 580px); /* Deutlich weiter rechts */
+    top: 50%;
+    transform: translateY(-50%);
 }
 
-/* Köpfe: Hier müsste ein SVG eingefügt werden, da CSS-Zeichnungen zu komplex sind */
+/* Köpfe: Inline-SVG als Maske */
+/* Da ich keine Bilder generieren kann, füge ich hier ein SVG ein, das den Stil im Bild gut trifft */
 .barber-head-drawing {
-    width: 250px;
-    height: 250px;
-    opacity: 0.2; /* Sehr dezent halten */
-    background: var(--gold); /* Platzhalterfarbe */
-    -webkit-mask: url('https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/barber-head-placeholder.svg') no-repeat center / contain;
-    mask: url('https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/barber-head-placeholder.svg') no-repeat center / contain;
+    width: 280px; /* Grösser gemacht */
+    height: 280px;
+    opacity: 0.1; /* Sehr dezent halten */
+    background-color: var(--gold); /* Farbe der Strichzeichnung */
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    filter: drop-shadow(0 0 8px var(--gold-shadow));
 }
-.barber-head-drawing.left { left: 0px; top: 100px; transform: scaleX(-1); }
-.barber-head-drawing.right { right: 0px; top: 100px; }
+
+.barber-head-drawing.left {
+    left: calc(50% - 350px); /* Näher am Formular */
+    -webkit-mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><defs><linearGradient id="goldGradient" x1="0%" y1="0%" x2="0%" y2="100%"><stop offset="0%" style="stop-color:rgb(255,215,0);stop-opacity:1" /><stop offset="100%" style="stop-color:rgb(230,210,0);stop-opacity:1" /></linearGradient></defs><path fill="url(%23goldGradient)" stroke="none" d="M100 10 C60 10 30 50 30 90 C30 130 60 170 100 170 C140 170 170 130 170 90 C170 50 140 10 100 10 Z M100 170 C80 170 60 150 60 130 L60 120 C60 110 70 100 80 100 L120 100 C130 100 140 110 140 120 L140 130 C140 150 120 170 100 170 Z M75 70 C75 60 80 55 85 55 C90 55 95 60 95 70 C95 80 90 85 85 85 C80 85 75 80 75 70 Z M125 70 C125 60 120 55 115 55 C110 55 105 60 105 70 C105 80 110 85 115 85 C120 85 125 80 125 70 Z M70 135 L130 135 C135 135 138 138 138 143 C138 148 135 151 130 151 L70 151 C65 151 62 148 62 143 C62 138 65 135 70 135 Z"/></svg>') no-repeat center / contain;
+    mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><defs><linearGradient id="goldGradient" x1="0%" y1="0%" x2="0%" y2="100%"><stop offset="0%" style="stop-color:rgb(255,215,0);stop-opacity:1" /><stop offset="100%" style="stop-color:rgb(230,210,0);stop-opacity:1" /></linearGradient></defs><path fill="url(%23goldGradient)" stroke="none" d="M100 10 C60 10 30 50 30 90 C30 130 60 170 100 170 C140 170 170 130 170 90 C170 50 140 10 100 10 Z M100 170 C80 170 60 150 60 130 L60 120 C60 110 70 100 80 100 L120 100 C130 100 140 110 140 120 L140 130 C140 150 120 170 100 170 Z M75 70 C75 60 80 55 85 55 C90 55 95 60 95 70 C95 80 90 85 85 85 C80 85 75 80 75 70 Z M125 70 C125 60 120 55 115 55 C110 55 105 60 105 70 C105 80 110 85 115 85 C120 85 125 80 125 70 Z M70 135 L130 135 C135 135 138 138 138 143 C138 148 135 151 130 151 L70 151 C65 151 62 148 62 143 C62 138 65 135 70 135 Z"/></svg>') no-repeat center / contain;
+    transform: translateY(-50%) scaleX(-1); /* Spiegeln */
+}
+.barber-head-drawing.right {
+    right: calc(50% - 350px); /* Näher am Formular */
+    -webkit-mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><defs><linearGradient id="goldGradient" x1="0%" y1="0%" x2="0%" y2="100%"><stop offset="0%" style="stop-color:rgb(255,215,0);stop-opacity:1" /><stop offset="100%" style="stop-color:rgb(230,210,0);stop-opacity:1" /></linearGradient></defs><path fill="url(%23goldGradient)" stroke="none" d="M100 10 C60 10 30 50 30 90 C30 130 60 170 100 170 C140 170 170 130 170 90 C170 50 140 10 100 10 Z M100 170 C80 170 60 150 60 130 L60 120 C60 110 70 100 80 100 L120 100 C130 100 140 110 140 120 L140 130 C140 150 120 170 100 170 Z M75 70 C75 60 80 55 85 55 C90 55 95 60 95 70 C95 80 90 85 85 85 C80 85 75 80 75 70 Z M125 70 C125 60 120 55 115 55 C110 55 105 60 105 70 C105 80 110 85 115 85 C120 85 125 80 125 70 Z M70 135 L130 135 C135 135 138 138 138 143 C138 148 135 151 130 151 L70 151 C65 151 62 148 62 143 C62 138 65 135 70 135 Z"/></svg>') no-repeat center / contain;
+    mask: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200"><defs><linearGradient id="goldGradient" x1="0%" y1="0%" x2="0%" y2="100%"><stop offset="0%" style="stop-color:rgb(255,215,0);stop-opacity:1" /><stop offset="100%" style="stop-color:rgb(230,210,0);stop-opacity:1" /></linearGradient></defs><path fill="url(%23goldGradient)" stroke="none" d="M100 10 C60 10 30 50 30 90 C30 130 60 170 100 170 C140 170 170 130 170 90 C170 50 140 10 100 10 Z M100 170 C80 170 60 150 60 130 L60 120 C60 110 70 100 80 100 L120 100 C130 100 140 110 140 120 L140 130 C140 150 120 170 100 170 Z M75 70 C75 60 80 55 85 55 C90 55 95 60 95 70 C95 80 90 85 85 85 C80 85 75 80 75 70 Z M125 70 C125 60 120 55 115 55 C110 55 105 60 105 70 C105 80 110 85 115 85 C120 85 125 80 125 70 Z M70 135 L130 135 C135 135 138 138 138 143 C138 148 135 151 130 151 L70 151 C65 151 62 148 62 143 C62 138 65 135 70 135 Z"/></svg>') no-repeat center / contain;
+}
 
 
 /* --- Nachrichten von Gästen --- */
@@ -315,15 +333,21 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
 /* 📱 RESPONSIVE ANPASSUNGEN */
 /* -------------------------------------- */
 
-@media (max-width: 1200px) {
-    .barber-pole.left { margin-left: -400px; }
-    .barber-pole.right { margin-left: 320px; }
+@media (max-width: 1280px) {
+    /* Anpassungen für mittelgroße Bildschirme */
+    .barber-pole.left { left: 20px; margin-left: 0; }
+    .barber-pole.right { right: 20px; margin-right: 0; }
+    .scissors-drawing { left: 40px; font-size: 80px; }
+    .comb-drawing { right: 40px; font-size: 80px; }
+    .barber-head-drawing.left { left: 10px; width: 200px; height: 200px; }
+    .barber-head-drawing.right { right: 10px; width: 200px; height: 200px; }
 }
 
 @media(max-width: 900px){
     /* Dekorationselemente für Tablets/kleinere Desktops ausblenden */
     .barber-pole, .scissors-drawing, .comb-drawing, .barber-head-drawing { display: none; }
     .messages-grid { padding: 0 20px; }
+    .guestbook-section-custom { min-height: auto; } /* Min-Height zurücksetzen wenn Deko weg ist */
 }
 
 @media(max-width: 768px){
@@ -332,6 +356,7 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
     .guestbook-form-wrapper { max-width: 100%; margin: 0 10px; padding: 20px; }
     .messages-overview { margin-top: 50px; }
     .messages-grid { grid-template-columns: 1fr; /* Eine Spalte auf Handys */ }
+    .container {padding: 0 10px;}
 }
 </style>
 </head>
