--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ h2{text-align: center; margin-bottom: 30px; font-weight: 700; color: var(--gold-
 
 .guestbook-section-custom {
     /* HINTERGRUNDBILD (Wird auf Desktop verwendet) */
-    background-image: url('https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Gästebuch.png'); 
+    background-image: url('https://raw.githubusercontent.com/Artonstyle/Barbershop/main/images/Gästebuch1.png'); 
     background-size: cover; 
     background-position: center center;
     background-repeat: no-repeat;
